<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/beak_solo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/bgBeakHub"
        android:textAlignment="center"
        android:textSize="75sp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/Version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/bgBeakHub"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="@color/bgBeakHub"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp" />

</LinearLayout>