<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context=".Activities.ForgotPasswordActivity">

    <TextView
        android:id="@+id/tv_forgotten_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgotten"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/bgBeakHub"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_recovery_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_email"
        android:textSize="17sp"
        android:textColor="@color/bgBeakHub"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/tv_forgotten_pass"/>

    <EditText
        android:id="@+id/et_email_forgot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_inv_custom"
        android:textColorHint="@color/bgBeakHub"
        android:textColor="@color/bgBeakHub"
        android:layout_below="@+id/tv_recovery_email"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_send_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_custom_min"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:layout_below="@+id/et_email_forgot"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/beak_solo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>