<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/card_job"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="0dp"
    card_view:contentPaddingTop="10dp"
    card_view:contentPaddingBottom="10dp"
    android:foreground="?selectableItemBackground"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_job"
                android:layout_width="181dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="68dp"
                android:textSize="20sp"
                android:textColor="@color/bgBeakHub"
                android:text="@string/bhJob" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:text="@string/category"
                android:gravity="end|center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:text="@string/description" />

        </LinearLayout>
        <include layout="@layout/item_divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_like"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/bgBeakHub"
                android:text="@string/example_likes"/>
            <TextView
                android:id="@+id/tv_nb_comment"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/bgBeakHub"
                android:text="@string/example_opinion"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>