<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBeakHub"
    android:id="@+id/login_layout"
    tools:context=".Activities.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="50sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/White"/>

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textSize="17sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="50dp"
                android:textColor="@color/White"
                android:layout_below="@id/tv_title"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/bhAccount"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="60dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:layout_below="@id/tv_subtitle"
                android:background="@drawable/et_custom"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_below="@+id/et_username"
                android:padding="15dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_custom"
                android:text="@string/sign_in"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/swipe_left_for_register"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="15sp"
                    android:clickable="true"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="20dp"
                    android:focusable="true" />
                <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="20dp"
                    android:focusable="true" />
            </LinearLayout>


            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/beak_solo"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>