<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginTop="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/card_search"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="0dp"
    card_view:contentPadding="0dp"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tv_job_search"
                android:layout_width="181dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="68dp"
                android:textSize="20sp"
                android:textColor="@color/bgBeakHub"
                android:text="@string/bhJob" />
            <TextView
                android:id="@+id/tv_user"
                android:layout_width="181dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="68dp"
                android:textSize="15sp"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/lechatong" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_category_search"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:text="@string/category"
                android:gravity="end|center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_desc_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:text="@string/description" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">
            <!--<ImageView
                android:id="@+id/img_like"
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_star_border_bh_24dp"/>-->
            <TextView
                android:id="@+id/tv_search_nb_like"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/bgBeakHub"
                android:text="@string/example_likes"/>
            <!--<ImageView
                android:id="@+id/img_comment"
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_textsms_bh_24dp"/>-->
            <TextView
                android:id="@+id/tv_search_nb_comment"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/bgBeakHub"
                android:text="@string/example_opinion"/>
        </LinearLayout>
        <include layout="@layout/item_divider" />
    </LinearLayout>

</androidx.cardview.widget.CardView>