<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_change_pass"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/change_pass"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/beak_solo"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_change_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pass"
                android:textAlignment="center"
                android:textSize="40sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/bgBeakHub"
                android:layout_marginTop="60dp" />
            <EditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/old_pass"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textColor="@color/bgBeakHub"
                android:background="@drawable/et_inv_custom"
                android:textColorHint="@color/bgBeakHub"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/new_pass"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textColor="@color/bgBeakHub"
                android:background="@drawable/et_inv_custom"
                android:textColorHint="@color/bgBeakHub"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textColor="@color/bgBeakHub"
                android:background="@drawable/et_inv_custom"
                android:textColorHint="@color/bgBeakHub"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_save_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_custom_min"
                android:text="@string/save"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>